--- a/index.html
+++ b/index.html
@@ -16,12 +16,16 @@
 	<!-- Wrapper -->
 		<div id="wrapper" class="fade-in">
 
+			<!-- Profile Photo -->
+			<div style="display: flex; justify-content: center; margin-bottom: -20px; margin-top: 50px;">
+				<img src="images/IMG_0946.jpeg" alt="Kevin Jonathan Rotty" style="width: 380px; height: 380px; object-fit: cover; border-radius: 50%; box-shadow: 0 2px 12px rgba(0,0,0,0.18);" />
+			</div>
 			<!-- Intro -->
 				<div id="intro">
 					<h1>Kevin Jonathan Rotty<br />
 					Portfolio</h1>
 					<!-- Download Resume button moved below the title -->
-					<a href="resume.pdf" class="button primary icon solid fa-download" style="margin-bottom: 15px;" download>
+					<a href="assets/Kevin's Resume.pdf" class="button primary icon solid fa-download" style="margin-bottom: 15px;" download>
 						Download My Resume
 					</a>
 					<br />
@@ -29,6 +33,8 @@
 						Data Analyst and Data Scientist with hands-on experience in
 						<strong>Python</strong>, <strong>SQL</strong>, <strong>Excel</strong>, and <strong>Tableau</strong>.<br />
 						Passionate about turning complex data into meaningful insights and data-driven decisions.<br />
+						Interested in machine learning, NLP, and predictive modeling to solve real-world problems.
+						<br />
 						<br />
 						Explore my projects and skills below.
 					</p>
@@ -53,7 +59,7 @@
 						</ul>
 						<ul class="icons">
 							<li><a href="https://www.linkedin.com/in/kevin-jonathan-rty/" class="icon brands fa-linkedin"><span class="label">linkedin</span></a></li>
-							<li><a href="https://github.com/Vinss14" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+							<li><a href="https://github.com/KevinJonathanR" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 							<li><a href="https://wa.me/6282292202919" class="icon brands fa-whatsapp"><span class="label">WhatsApp</span></a></li>
 							<li><a href="mailto:kevinjonathanrty@gmail.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 						</ul>
@@ -66,7 +72,7 @@
 							<article class="post featured">
 								<header class="major">
 									<span class="date" style="font-weight: bold;">Personal Project</span>
-									<h2><a href="https://github.com/Vinss14/titanic-survivor-analysis">TITANIC SURVIVOR ANALYSIS USING PYTHON<br />
+									<h2><a href="https://github.com/KevinJonathanR/titanic-survivor-analysis">TITANIC SURVIVOR ANALYSIS USING PYTHON<br />
 									</a></h2>
 									<p>
 										This project explores the <strong>Titanic passenger dataset</strong> to identify which types of passengers 
@@ -77,9 +83,9 @@
 										<strong>survival rates</strong>, supported by both static and interactive visualizations.
 									</p>
 								</header>
-								<a href="https://github.com/Vinss14/titanic-survivor-analysis" class="image main"><img src="images/titanicFoto.avif" alt="" /></a>
+								<a href="https://github.com/KevinJonathanR/titanic-survivor-analysis" class="image main"><img src="images/titanicFoto.avif" alt="" /></a>
 								<ul class="actions special">
-									<li><a href="https://github.com/Vinss14/titanic-survivor-analysis" class="button large">View This Project</a></li>
+									<li><a href="https://github.com/KevinJonathanR/titanic-survivor-analysis" class="button large">View This Project</a></li>
 								</ul>
 							</article>
 
@@ -88,57 +94,86 @@
 								<article>
 									<header>
 										<span class="date" style="font-weight: bold;">Personal Project</span>
-										<h2><a href="https://github.com/Vinss14/coffe-bean-sales">Coffe Bean Sales Dashboard<br />
+										<h2><a href="https://github.com/KevinJonathanR/coffe-bean-sales">Coffe Bean Sales Dashboard<br />
 										With Excel</a></h2>
 									</header>
-									<a href="https://github.com/Vinss14/coffe-bean-sales" class="image fit"><img src="images/coffeBean.jpeg" alt="" /></a>
+									<a href="https://github.com/KevinJonathanR/coffe-bean-sales" class="image fit"><img src="images/coffeBean.jpeg" alt="" /></a>
 									<p>This project features a <strong>sales analysis dashboard</strong> in <strong>Microsoft Excel</strong> using coffee company data (2019–2022). I merged raw data with <strong>XLOOKUP</strong> 
 										and <strong>IF</strong> formulas to create a structured sheet, then built <strong>PivotTables</strong> and an interactive dashboard with <strong>slicers</strong> for filtering by year, 
 										product, and region, also providing key <strong>business insights</strong>.</p>
 									<ul class="actions special">
-										<li><a href="https://github.com/Vinss14/coffe-bean-sales" class="button">View This Project</a></li>
+										<li><a href="https://github.com/KevinJonathanR/coffe-bean-sales" class="button">View This Project</a></li>
 									</ul>
 								</article>
 								<article>
 									<header>
 										<span class="date" style="font-weight: bold;">Personal Project</span>
-										<h2><a href="#">Multiple Linear Regression Model From Scratch<br />
+										<h2><a href="https://github.com/KevinJonathanR/multipleLinearRegression-fromScratch">Multiple Linear Regression Model From Scratch<br />
 										with Python</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/minyakbumi.jpg" alt="" /></a>
+									<a href="https://github.com/KevinJonathanR/multipleLinearRegression-fromScratch" class="image fit"><img src="images/minyakbumi.jpg" alt="" /></a>
 									<p>In this project, I built a <strong>multiple linear regression model from scratch in Python</strong> to predict global crude oil prices using key energy and economic indicators. 
 										I used <strong>stepwise selection</strong> to find the most important predictors and implemented the regression algorithm manually, without high-level libraries. Visualizations 
 										like <strong>residual plots</strong> and <strong>feature-target relationships</strong> helped interpret the results.</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">View This Project</a></li>
+										<li><a href="https://github.com/KevinJonathanR/multipleLinearRegression-fromScratch" class="button">View This Project</a></li>
 									</ul>
 								</article>
 							</section>
+
+						<!-- Featured Post -->
+							<article class="post featured">
+								<header class="major">
+									<span class="date" style="font-weight: bold;">Team Project</span>
+									<h2><a href="https://github.com/FaarisKhairrudin/AstroClassify">Astronomy Object Classification App<br />
+									</a></h2>
+									<p>
+										This project is a web-based data science application built to classify celestial objects—Stars, Quasars, and Galaxies—using the Sloan Digital Sky Survey (SDSS) dataset.
+										As part of a 5-member team, we designed and implemented a complete machine learning pipeline that included:
+										Data input & preprocessing,
+										Model selection & evaluation,
+										Visualization of predictions, and
+										Exporting classification results.
+										My primary responsibility focused on developing the data input interface, which allows users to:
+										Upload data via CSV, and
+										Manually input individual object data with required features
+										(alpha, beta, redshift, u, g, r, i, z)
+									</p>
+								</header>
+								<a href="https://github.com/FaarisKhairrudin/AstroClassify" class="image main"><img src="images/astroclasify.jpg" alt="" /></a>
+								<ul class="actions special">
+									<li><a href="https://github.com/FaarisKhairrudin/AstroClassify" class="button large">View This Project</a></li>
+								</ul>
+							</article>
 
 				<!-- Footer -->
 					
 					<footer>
 						<section class="split contact" style="display: flex; flex-wrap: wrap; justify-content: center; align-items: flex-start; text-align: center; gap: 40px; margin: 0 auto; max-width: 1000px;">
 							<!-- Address -->
-							<section class="alt" style="min-width: 220px; display: flex; flex-direction: column; align-items: center; justify-content: center; transform: translateX(-15px);">
+							<section class="alt" style="min-width: 220px; display: flex; flex-direction: column; align-items: center; justify-content: center;">
+
 								<h3 style="margin-bottom: 0.5em; text-align: center; width: 100%; display: flex; justify-content: center;">Address</h3>
 								<p style="margin-top: 0; text-align: center; width: 100%; display: flex; justify-content: center;"><a href="https://www.google.com/maps?q=Bojongsoang,+Bandung,+Indonesia" target="_blank">Bojongsoang, Bandung, Indonesia</a></p>
 							</section>
 							<!-- Phone -->
-							<section style="min-width: 220px; display: flex; flex-direction: column; align-items: center; justify-content: center; transform: translateX(-15px);">
+							<section class="alt" style="min-width: 220px; display: flex; flex-direction: column; align-items: center; justify-content: center;">
+
 								<h3 style="margin-bottom: 0.5em; text-align: center; width: 100%; display: flex; justify-content: center;">Phone</h3>
 								<p style="margin-top: 0; text-align: center; width: 100%; display: flex; justify-content: center;"><a href="https://wa.me/6282292202919" target="_blank">WhatsApp +6282292202919</a></p>
 							</section>
 							<!-- Email -->
-							<section style="min-width: 220px; display: flex; flex-direction: column; align-items: center; justify-content: center; transform: translateX(-15px);">
+							<section class="alt" style="min-width: 220px; display: flex; flex-direction: column; align-items: center; justify-content: center;">
+
 								<h3 style="margin-bottom: 0.5em; text-align: center; width: 100%; display: flex; justify-content: center;">Email</h3>
 								<p style="margin-top: 0; text-align: center; width: 100%; display: flex; justify-content: center;"><a href="mailto:kevinjonathanrty@gmail.com">kevinjonathanrty@gmail.com</a></p>
 							</section>
-							<section style="min-width: 220px; display: flex; flex-direction: column; align-items: center; justify-content: center;">
+							<section class="alt" style="min-width: 220px; display: flex; flex-direction: column; align-items: center; justify-content: center;">
+
 								<h3 style="margin-bottom: 0.5em; text-align: center; width: 100%; display: flex; justify-content: center;">Social</h3>
 								<div style="display: flex; gap: 10px; justify-content: center;">
 									<a href="https://www.linkedin.com/in/kevin-jonathan-rty/" class="icon brands fa-linkedin"><span class="label">linkedin</span></a>
-									<a href="https://github.com/Vinss14" class="icon brands fa-github"><span class="label">GitHub</span></a>
+									<a href="https://github.com/KevinJonathanR" class="icon brands fa-github"><span class="label">GitHub</span></a>
 								</div>
 							</section>
 						</section>
