--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 			<!-- Profile Photo -->
 			<div style="display: flex; justify-content: center; margin-bottom: -20px; margin-top: 50px;">
-				<img src="images/IMG_0946.jpeg" alt="Kevin Jonathan Rotty" style="width: 380px; height: 380px; object-fit: cover; border-radius: 50%; box-shadow: 0 2px 12px rgba(0,0,0,0.18);" />
+				<img src="images/Kevin.jpg" alt="Kevin Jonathan Rotty" style="width: 380px; height: 380px; object-fit: cover; border-radius: 50%; box-shadow: 0 2px 12px rgba(0,0,0,0.18);" />
 			</div>
 			<!-- Intro -->
 				<div id="intro">
